<resources>
    <string name="app_name">SampleApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_screen">Home Screen</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username_placeholder">Enter your username</string>
    <string name="pass_placeholder">Enter your password</string>
    <string name="confirm_pass">Confirm your password</string>
    <string name="email_placeholder">Enter your email</string>
    <string name="login_google">Login with Google</string>
    <string name="register_google">Register with Google</string>
    <string name="register_facebook">Register with Facebook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user">UserActivity</string>
</resources>