<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".RegisterFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="226dp"
            android:src="@drawable/ic_launcher_foreground" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="WELCOME TO OUR SAMPLE APP"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/editRegisUsername"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="text"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/username_placeholder"
            android:padding="15sp"
            android:layout_marginBottom="15dp"
            />

        <EditText
            android:id="@+id/editRegisEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:hint="@string/email_placeholder"
            android:inputType="textEmailAddress"
            android:padding="15sp" />

        <EditText
            android:id="@+id/editRegisPass"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:hint="@string/pass_placeholder"
            android:inputType="textPassword"
            android:padding="15sp" />

        <EditText
            android:id="@+id/editRegisConfirm"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:hint="@string/confirm_pass"
            android:inputType="textPassword"
            android:padding="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_corner"
            android:backgroundTint="@color/deepcharcoal"
            android:text="@string/register"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Or"
        android:textSize="15sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnRegisGoogle"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:text="@string/register_google"
            android:backgroundTint="@color/lightgray"
            android:textColor="@color/black"
            android:background="@drawable/btn_corner"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:id="@+id/btnRegisFacebook"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:text="@string/register_facebook"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:background="@drawable/btn_corner"
            />
    </LinearLayout>
</LinearLayout>