<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/ic_launcher_foreground" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="WELCOME TO OUR SAMPLE APP"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/email_placeholder"
            android:padding="15sp"
            android:layout_marginBottom="15dp"
            />

        <EditText
            android:id="@+id/editLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/pass_placeholder"
            android:padding="15sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp">
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:text="@string/login"
            android:backgroundTint="@color/deepcharcoal"
            android:textColor="@color/white"
            android:background="@drawable/btn_corner"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Or"
        android:textSize="15sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLoginGoogle"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:text="@string/login_google"
            android:backgroundTint="@color/lightgray"
            android:textColor="@color/black"
            android:background="@drawable/btn_corner"
            />
    </LinearLayout>


</LinearLayout>